# autonomous-coding-agent-template

./: CLAUDE.md  README.md  catalog-info.yaml  template.yaml
docs/: index.md
skeleton/: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  catalog-info.yaml  pyproject.toml
skeleton/.argo/: ci.yaml
skeleton/.github/workflows/: ci.yaml
skeleton/docs/: EXTENDING.md  GETTING_STARTED.md  PATTERNS.md  SECURITY.md  TROUBLESHOOTING.md  architecture.md
skeleton/docs/adr/: 001-two-phase-pattern.md  002-security-allowlist.md  003-progress-tracking.md
skeleton/k8s/: external-secret.yaml  job.yaml  kustomization.yaml
skeleton/prompts/: app_spec.txt  coding_prompt.md  initializer_prompt.md
skeleton/src/: __init__.py  agent.py  client.py  main.py  progress.py  prompts.py  security.py
skeleton/tests/: __init__.py  test_security.py
