[project]
name = "${{ values.name }}"
version = "0.1.0"
description = "${{ values.description }}"
readme = "README.md"
requires-python = ">=${{ values.pythonVersion }}"
dependencies = [
    "claude-code-sdk>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
${{ values.name }} = "src.main:main"

[tool.ruff]
line-length = 100
target-version = "py${{ values.pythonVersion | replace('.', '') }}"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "${{ values.pythonVersion }}"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
